Contract Configurator 0.5.0
- RemoteTech integration!
  - KSCConnectivity parameter - indicates that a vessel must have connectivity back to mission control.
  - SignalDelay parameter - requires a min/max signal delay for a connection.
  - VesselConnectivity parameter - checks for connectivity between two vessels.
- Vessel tracking!
  - New define attribute of VesselParameterGroup to associate the ship that completes the parameter to the given name.
  - IsNotVessel parameter for exclusion (eg. to have two VesselParameterGroup parameters in a contract that must be met by different vessels).
- Added PartValidator parameter and deprecated HasPart and HasPartModule.
- Added OrbitAltitude parameter.
- Changed default values for disableOnStageChange in parameters to be more logical.

Contract Configurator 0.4.3
- Fixed issue where SCANsat reported 100% scanning during flight loading, causing SCANsat parameters to complete early.

Contract Configurator 0.4.2
- Improved validation when loading configuration.  More checking for invalid cases and better error messaging.
- Added HasPassengers parameter.
- Added Funds requirement.
- Added Science requirement.
- Added Repuration requirement.
- Allow zero min speed for ReachSpeedEnvelope; improved titles.
- Minor bug fixes.

Contract Configurator 0.4.1
- Added OrbitalInclination parameter (thanks tattagreis).
- Added OrbitalEccentricity parameter (thanks tattagreis).
- Added OrbitalApoapsis parameter (thanks tattagreis).
- Added OrbitalPeriapsis parameter (thanks tattagreis).
- Fixed defaults for SCANsatCoverage requirement.
- Moved debug key from Alt-F9 to Alt-F10.
- Added LICENSE.txt into download file.
- Minor bug fixes.

Contract Configurator 0.4.0
- Added WaypointGenerator behaviour.  Allows creation of waypoints.
- Added VisitWaypoint parameter (for use with WaypointGenerator behaviour).
- Added OrbitGenerator behaviour.  Allows creation of orbits.