@@ -1,5 +1,6 @@
 Contract Configurator 0.5.0
 - RemoteTech integration!
+  - ActiveVesselConnection parameter - indicates that a vessel must have an Omni or dish targetted to the active vessel with the given range.
   - KSCConnectivity parameter - indicates that a vessel must have connectivity back to mission control.
   - SignalDelay parameter - requires a min/max signal delay for a connection.
   - VesselConnectivity parameter - checks for connectivity between two vessels.
@@ -9,6 +10,7 @@ Contract Configurator 0.5.0
 - Added PartValidator parameter and deprecated HasPart and HasPartModule.
 - Added OrbitAltitude parameter.
 - Changed default values for disableOnStageChange in parameters to be more logical.
+- Minor bug fixes
 
 Contract Configurator 0.4.3
 - Fixed issue where SCANsat reported 100% scanning during flight loading, causing SCANsat parameters to complete early.
